Replaced rows using flexbox to use fixed 33.33% width (flexbox not working on iOS safari)

--- a/client/src/css/little-twitter-page.scss
+++ b/client/src/css/little-twitter-page.scss
@@ -27,14 +27,15 @@ body {
     }
   }
   #sortableTweetsComponents {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-bottom: 0px;
     li {
       flex-grow: 1;
       width: 33.33%;
-      display: block;
+      display: inline-block;
+      vertical-align: top;
       &.ui-sortable-helper {
         .TweetsComponent {
           background-color: #E6E6E6;
